cabal-version:      3.0
name:               try-pledge-wai
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Björn Gohla
maintainer:         b.gohla@gmx.de
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable try-pledge-wai
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, wai, warp, bytestring, http-types
    hs-source-dirs:   app
    default-language: GHC2021
